@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.25 2004/03/30 00:53:31 reed Exp $
+$NetBSD: distinfo,v 1.26 2004/03/31 04:59:18 xtraeme Exp $
 
-SHA1 (abiword-2.0.4.tar.bz2) = 9e2d9b00cf3d1991e474b1ac78a9f86c9b673734
-Size (abiword-2.0.4.tar.bz2) = 22057414 bytes
+SHA1 (abiword-2.0.5.tar.bz2) = 27a8c51b2060cbc8eeeef03b96ec4ee105ccb172
+Size (abiword-2.0.5.tar.bz2) = 21955989 bytes
 SHA1 (patch-aa) = 730e205f54516535394659c74e052bbe706e1bc2
 SHA1 (patch-ab) = 27c48de3374288c7f6d6749ff18ebeedf91cb3ab
